# LeadAITrustFramework

./: .dockerignore  .env.old  .gitattributes  .gitignore  .task_status.md  CLAUDE.md  LANGFUSE.md  MULTI_ENTITY_MIGRATION_PLAN.md  README.MD  README.md  TEMP_admin_page_with_numbers.txt  WEB_GUI_CHANGES_SUMMARY.md  admin_page_numbered.txt  check-wsl.ps1  docker-compose.yml  langfuse-docker-compose.yml  package - Copy.json  package.json  pnpm-lock.yaml  trustmark_private.pem  trustmark_public.pem
apps/core-svc/: .env  Dockerfile  alembic.ini  cors-aws.json  cors.json  pyproject.toml  requirements.txt  start.sh
apps/core-svc/alembic/: check_migration_state.py  env.py
apps/core-svc/app/: .env  AI_Governance_Leadership_Deck_LeadAI_Branded_Thanks_withLogo.pptx  admin.py  app_db.py  db.py  db_async.py  db_utils.py  dependencies.py  generate_leadai_presentation.py  generate_pdf - 1.py  generate_pdf.py  generate_pptx.py  generate_xslx.py  guardrails_engine.py  leadai_compute_kpi_scores.py  leadai_compute_pillar_scores.py  leadai_compute_pillar_scores_batch.py  leadai_models_reflected.py  leadai_scorecards_update.py  main.py  models.py  projects.py  score_engine.py  scorecard.py  seed_kpis.py  settings.py  trends.py
apps/core-svc/config/: provenance_rules.yaml
apps/core-svc/docs/: jira_integration.md  provenance_scoring.md
apps/core-svc/leadai_core.egg-info/: PKG-INFO  SOURCES.txt
apps/core-svc/scripts/: check_entity_columns.py  langfuse_project_keys.csv  langfuse_sync_org_projects.py  wait_for_db.py
apps/core-svc/tests/: test_company_profile_from_url.py  (+30 more)
(+717 files in other folders)
