[project]
name = "leadai-core"
version = "0.1.0"
description = "LeadAI core service"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]                   # discover 'app' and subpackages

[tool.setuptools]
include-package-data = true